modernizing build w/ multistage